k0s/cluster-issuer-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
