k0s/app-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-service
spec:
  selector:
    app: application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: application
          image: ghcr.io/13dev/madeirareport-api:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: app-data
              mountPath: /logs
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data
