k0s/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
  name: application-ingress
spec:
  rules:
    - host: api.madeirareport.pt
      http:
        paths:
          - backend:
              service:
                name: application-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api.madeirareport.pt
      secretName: api-madeirareport-pt-tls
